Prevent error by disabling button